--- a/src/styles.css
+++ b/src/styles.css
@@ -40,3 +40,34 @@
 .close-button {
   cursor: pointer;
 }
+
+.image-container {
+  height: 150px;
+  width: 150px;
+  display: flex;
+  img {
+    height: 100px;
+    width: 100px;
+    margin: 5px;
+    border-radius: 5px;
+  }
+}
+
+.pagination-container {
+  display: flex;
+  justify-content: space-evenly;
+  width: 550px;
+}
+.page-btn {
+  background-color: green;
+  color: white;
+  padding: 1rem;
+  margin: 5px;
+  border-radius: 5px;
+  cursor: pointer;
+}
+.isActive {
+  background-color: white;
+  color: black;
+  border: 1px solid black;
+}
